[project]
name = "mammotion-lite"
version = "0.1.0"
description = "Minimal Home Assistant integration for Mammotion robotic mowers"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.15",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "homeassistant>=2025.5.0",
    "pymammotion",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.13"
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
